# back-end/controllers/location-controller.js
@@ -12,7 +12,7 @@ class LocationController {
         this.router.get('/', this.getLocations.bind(this));
         this.router.post('/', this.postLocation.bind(this));
         this.router.get('/:name', this.getLocationsByName.bind(this));
-       // this.router.put('/:id', this.putPlayer.bind(this));
+        this.router.get('/:name/:date', this.getLocationsByNameDate.bind(this));
     }
 
     getLocations(req, res) {
@@ -40,49 +40,17 @@ class LocationController {
         }
     }
 
-
-
-/*getSinglePlayer(req, res) {
-        var id = req.params.id;
-        var player = PlayersService.getSinglePlayer(id);
-        if (!player) {
+    getLocationsByNameDate(req, res) {
+        var name = req.params.name;
+        var date = req.params.date;
+        var locations = LocationService.getLocationsByNameDate(name, date);
+        if (!locations) {
             res.sendStatus(404);
         } else {
-            res.send(player);
+            res.send(locations);
         }
     }
 
-    putPlayer(req, res) {
-        var id = parseInt(req.params.id, 10);
-        var existingPlayer = PlayersService.getSinglePlayer(id);
-        if (!existingPlayer) {
-            var playerInfo = req.body;
-            playerInfo.id = id;
-            if (PlayersService.addPlayer(playerInfo)) {
-                res.setHeader('Location', '/players/' + id);
-                res.sendStatus(201);
-            } else {
-                res.sendStatus(500);
-            }
-        } else {
-            if (PlayersService.updatePlayer(id, req.body)) {
-                res.sendStatus(204);
-            } else {
-                res.sendStatus(404);
-            }
-        }
-    }
-
-    postPlayer(req, res) {
-        var playerInfo = req.body;
-        if (PlayersService.addPlayer(playerInfo)) {
-            res.setHeader('Location', '/players/' + playerInfo.id);
-            res.sendStatus(200);
-        } else {
-            res.sendStatus(500);
-        }
-    }
-    */
 }
 
 module.exports = LocationController;
